Source/JavaScriptCore/runtime/StructureInlines.h
@@ -27,6 +27,7 @@
 #define StructureInlines_h
 
 #include "JSArrayBufferView.h"
+#include "JSCJSValueInlines.h"
 #include "JSGlobalObject.h"
 #include "PropertyMapHashTable.h"
 #include "Structure.h"
@@ -49,6 +50,28 @@ inline Structure* Structure::createStructure(VM& vm)
     Structure* structure = new (NotNull, allocateCell<Structure>(vm.heap)) Structure(vm);
     structure->finishCreation(vm, CreatingEarlyCell);
     return structure;
+}
+
+inline Structure* Structure::createSubclassStructure(VM& vm, Structure* baseStructure, JSValue prototype)
+{
+    if (!prototype)
+        return baseStructure;
+
+    ASSERT(prototype != baseStructure->m_prototype.get());
+    ASSERT(prototype.isObject() || prototype.isNull());
+
+    if (prototype.isObject())
+        vm.prototypeMap.addPrototype(prototype.getObject());
+
+    // FIXME: This is super bad, not only does this transition the original prototype but it also causes a new structure
+    // to be created each time we allocate a new subclassed object for a builtin. Instead we should allocate a new structure
+    // that is identical other than the new prototype then we should cache it. https://bugs.webkit.org/show_bug.cgi?id=152710
+    Structure* newStructure = changePrototypeTransition(vm, baseStructure, prototype);
+
+    if (hasIndexedProperties(newStructure->indexingType()) && newStructure->anyObjectInChainMayInterceptIndexedAccesses())
+        newStructure->m_blob.setIndexingType((newStructure->indexingType() & ~IndexingShapeMask) | SlowPutArrayStorageShape);
+
+    return newStructure;
 }
 
 inline Structure* Structure::create(VM& vm, Structure* structure, DeferredStructureTransitionWatchpointFire* deferred)
